# opkg

./: CMakeLists.txt
cmake/modules/: FindGpgme.cmake
libopkg/: CMakeLists.txt
libopkg/solvers/internal/: CMakeLists.txt
libopkg/solvers/libsolv/: CMakeLists.txt
tests/: tests.cmake
